--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,13 @@ repositories {
 }
 
 dependencies {
+	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '2.5.0'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+
+	compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.20'
+
+	runtimeOnly(group: 'org.postgresql', name: 'postgresql', version: '42.2.20')
+
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
