--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 server.servlet.context-path=/market/api
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/market
+spring.datasource.username=cmaciel
+spring.datasource.password=postgres
